[project]
name = "inngest-py"
version = "0.0.0"
authors = [{ name = "Inngest Inc.", email = "hello@inngest.com" }]
description = "Python SDK for Inngest"
readme = "README.md"
requires-python = ">=3.9"

[project.optional-dependencies]
extra = [
    "Django==4.2",
    "Flask==2.3.0",
    "boto3-stubs[s3]==1.35.46",
    "boto3==1.35.47",
    "build==1.0.3",
    "cryptography==42.0.5",
    "django-types==0.19.1",
    "fastapi==0.100.0",
    "moto[s3,server]==5.0.18",
    "mypy==1.10.0",
    "pynacl==1.5.0",
    "pytest==8.3.4",
    "pytest-django==4.7.0",
    "pytest-xdist[psutil]==3.3.1",
    "ruff==0.9.5",
    "sentry-sdk==2.1.1",
    "toml==0.10.2",
    "tornado==6.3",
    "types-toml==0.10.8.7",
    "types-tornado==5.1.1",
    "uvicorn==0.23.2",

    # Werkzeug v3.1 deleted something that breaks our minimum Flask version
    # (v2.3.0). So for now, only allow Werkzeug versions below v3.1. See this PR
    # for the deleted thing: https://github.com/pallets/werkzeug/pull/2967
    "werkzeug<3.1",
]

[project.urls]
"Homepage" = "https://github.com/inngest/inngest-py"
"Bug Tracker" = "https://github.com/inngest/inngest-py/issues"
