[project]
name = "inngest"
version = "0.4.22"
authors = [{ name = "Inngest Inc.", email = "hello@inngest.com" }]
description = "Python SDK for Inngest"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: FastAPI",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"

dependencies = [
    "httpx>=0.26.0",
    "jcs>=0.2.1",
    "pydantic>=2.11.0",
    "typing-extensions>=4.13.0",
]

[project.optional-dependencies]
connect = ["protobuf>=5.29.4", "psutil>=6.0.0", "websockets>=15.0.0"]

[project.urls]
"Homepage" = "https://github.com/inngest/inngest-py"
"Bug Tracker" = "https://github.com/inngest/inngest-py/issues"

[tool.setuptools.package-data]
# Makes py.typed appear when users install the inngest package.
inngest = ["py.typed"]
