[project]
name = "inngest"
version = "0.5.1a0"
authors = [{ name = "Inngest Inc.", email = "hello@inngest.com" }]
description = "Python SDK for Inngest"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: FastAPI",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"

dependencies = [
    "httpx>=0.26.0",
    "jcs>=0.2.1",
    "pydantic>=2.11.0",
    "typing-extensions>=4.13.0",
]

[project.optional-dependencies]
connect = ["protobuf>=5.29.4", "psutil>=6.0.0", "websockets>=15.0.0"]

[project.urls]
"Homepage" = "https://github.com/inngest/inngest-py"
"Bug Tracker" = "https://github.com/inngest/inngest-py/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools.package-data]
# Makes py.typed appear when users install the inngest package.
inngest = ["py.typed"]
