[project]
name = "inngest_encryption"
version = "0.0.1a1"
authors = [{ name = "Inngest Inc.", email = "hello@inngest.com" }]
description = "Encryption for the Inngest SDK"
readme = "../../README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"

dependencies = ["pynacl>=1.5.0"]

[project.urls]
"Homepage" = "https://github.com/inngest/inngest-py"
"Bug Tracker" = "https://github.com/inngest/inngest-py/issues"

[tool.pylint.'MESSAGES CONTROL']
disable = [
    'broad-exception-caught',
    'broad-exception-raised',
    'duplicate-code',
    'fixme',
    'invalid-envvar-value',
    'line-too-long',
    'missing-docstring',
    'too-few-public-methods',
    'too-many-arguments',
    'too-many-instance-attributes',
    'too-many-return-statements',
    'unused-argument',
]

[tool.pytest.ini_options]
filterwarnings = ['ignore::pytest.PytestAssertRewriteWarning']

[tool.setuptools.package-data]
# Makes py.typed appear when users install the inngest package.
inngest_encryption = ["py.typed"]
