[project]
name = "test_utils"
version = "0.0.0"
authors = [{ name = "Inngest Inc.", email = "hello@inngest.com" }]
description = "Test utilities for Inngest Python SDK"
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["test_core"]
