[project]
name = "test_core"
version = "0.0.0"
authors = [{ name = "Inngest Inc.", email = "hello@inngest.com" }]
description = "Test utilities for Inngest Python SDK"
requires-python = ">=3.10"
dependencies = [
    "httpx",
    "fastapi",
    "flask",
    "inngest",
]

[tool.uv.sources]
inngest = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
